--- a/examples/index-unmanaged.html
+++ b/examples/index-unmanaged.html
@@ -29,6 +29,7 @@
 
 	<div id="capture" >Capture</div>
 
+	<script src="js/ImageData-polyfill.js"></script>
 	<script src="js/canvas.toBlob-polyfill.js"></script>
 	<script src="js/three.min.js"></script>
 	<script src="js/OrbitControls.js"></script>
