fixed renderer.render argument

--- a/examples/index-unmanaged.html
+++ b/examples/index-unmanaged.html
@@ -120,7 +120,7 @@
 			document.getElementById( 'capture' ).addEventListener( 'click', function( e ) {
 
 				cubeCamera.position.copy( camera.position );
-				cubeCamera.updateCubeMap( renderer, scene );
+				cubeCamera.update( renderer, scene );
 				equi.convert( cubeCamera );
 
 			} );
